[metadata]
name = mysqlite3-mod
version = 0.0.1
author = Eric Johnfelt
author_email = ejohnfel@hotmail.com
description = A super simplistic wrapper around SQLite3, you probably don't want to use this.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ejohnfel/mysqlite
project_urls =
    Bug Tracker = https://github.com/ejohnfel/mysqlite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = myqlite
python_requires = >=3.8

[options.packages.find]
where = src
